--- a/packages/@lightningjs/ui-components/src/components/FocusManager/FocusManager.mdx
+++ b/packages/@lightningjs/ui-components/src/components/FocusManager/FocusManager.mdx
@@ -107,12 +107,12 @@ class FancyFocus extends FocusManager {
 
 ### Properties
 
-| name          | type                                                    | default   | description                                                    |
-| ------------- | ------------------------------------------------------- | --------- | -------------------------------------------------------------- |
-| direction     | 'column'\|'row'                                         | undefined | The navigation direction for focus ('left/right' or 'up/down') |
-| selectedIndex | number                                                  | undefined | The index of the currently selected item.                      |
-| items         | <DocsLink id="lng.Component">lng.Component[]</DocsLink> | undefined | Child element or elements of the FocusManager.                 |
-| wrapSelected  | boolean                                                 | false     | Enables wrapping behavior for focus navigation.                |
+| name          | type                                                    | default   | description                                                                                                                                                                                                                                                                                                                                            |
+| ------------- | ------------------------------------------------------- | --------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| direction     | 'column'\|'row'                                         | undefined | The navigation direction for focus ('left/right' or 'up/down')                                                                                                                                                                                                                                                                                         |
+| selectedIndex | number                                                  | undefined | The index of the currently selected item.                                                                                                                                                                                                                                                                                                              |
+| items         | <DocsLink id="lng.Component">lng.Component[]</DocsLink> | undefined | Child element or elements of the FocusManager.                                                                                                                                                                                                                                                                                                         |
+| wrapSelected  | boolean                                                 | false     | When wrapSelected is set to true, the focus will loop back to the beginning of the list after reaching the last item, and vice versa. This enables continuous navigation through the list without dead ends. If wrapSelected is set to false (the default value), the focus will stop at the first or last item, depending on the navigation direction |
 
 ### Methods
 
