docs(makeCreateComponent): more descriptive example title

--- a/packages/@lightningjs/ui-components-test-utils/src/docs/TestUtils/makeCreateComponent.stories.mdx
+++ b/packages/@lightningjs/ui-components-test-utils/src/docs/TestUtils/makeCreateComponent.stories.mdx
@@ -50,7 +50,7 @@ Returns an array of 2 elements:
 
 <br />
 
-##### Example: Generating a makeComponent function with .
+##### Example: Generating a `makeComponent` function and test component
 
 ```js
 import lng from '@lightningjs/core';
