--- a/packages/@lightningjs/ui-components-test-utils/src/docs/TestUtils/completeAnimation.stories.mdx
+++ b/packages/@lightningjs/ui-components-test-utils/src/docs/TestUtils/completeAnimation.stories.mdx
@@ -21,3 +21,68 @@ import { Meta } from '@storybook/addon-docs';
 <Meta title="Unit Testing / Test Utils / completeAnimation" />
 
 # completeAnimation
+
+Returns a Promise that resolves once all animating properties have updated to their target value(s)
+
+## Arguments
+
+`completeAnimation(element, transitionProperties = [])`
+
+| argument             | type          | default | description                                                 |
+| -------------------- | ------------- | ------- | ----------------------------------------------------------- |
+| element              | lng.Element   | -       | element with properties that transition value changes       |
+| transitionProperties | array\|string | []      | property name(s) that transition value changes on component |
+
+<br />
+
+##### Example: Testing element properties before and after their values have transitioned
+
+```js
+import lng from '@lightningjs/core';
+import { makeCreateComponent } from '@lightningjs/ui-components-test-utils';
+
+class Example extends lng.Component {
+  static _template() {
+    return {
+      TransitioningRect: {
+        rect: true,
+        color: 0xffffffff,
+        w: 100,
+        h: 100,
+        x: 0,
+        y: 0
+      }
+    };
+  }
+
+  _updatePosition() {
+    this.tag('TransitioningRect').setSmooth('x', this.axisPosition);
+    this.tag('TransitioningRect').setSmooth('y', this.axisPosition);
+  }
+
+  set axisPosition(value) {
+    this._axisPosition = value;
+    this._updatePosition();
+  }
+
+  get axisPosition() {
+    return this._axisPosition;
+  }
+}
+
+// generate a createComponent function to use in tests
+const createExampleComponent = makeCreateComponent(Example);
+
+// Ex. await the transitions of x and y values to finish before testing the result
+it('should transition the x value of the component', async () => {
+  const [example] = createExampleComponent();
+  expect(example.tag('TransitioningRect').x).toBe(0);
+  expect(example.tag('TransitioningRect').y).toBe(0);
+
+  example.axisPosition = 50;
+  await completeAnimation(example.tag('TransitioningRect'), ['x', 'y']);
+
+  expect(example.tag('TransitioningRect').x).toBe(50);
+  expect(example.tag('TransitioningRect').y).toBe(50);
+});
+```
