docs: consistency in lightning references

--- a/packages/@lightningjs/ui-components-test-utils/src/docs/TestUtils/completeAnimation.stories.mdx
+++ b/packages/@lightningjs/ui-components-test-utils/src/docs/TestUtils/completeAnimation.stories.mdx
@@ -28,10 +28,10 @@ Returns a Promise that resolves once all animating properties have updated to th
 
 `completeAnimation(element, transitionProperties = [])`
 
-| argument             | type          | default | description                                                 |
-| -------------------- | ------------- | ------- | ----------------------------------------------------------- |
-| element              | lng.Element   | -       | element with properties that transition value changes       |
-| transitionProperties | array\|string | []      | property name(s) that transition value changes on component |
+| argument             | type              | default | description                                                 |
+| -------------------- | ----------------- | ------- | ----------------------------------------------------------- |
+| element              | Lightning.Element | -       | element with properties that transition value changes       |
+| transitionProperties | array\|string     | []      | property name(s) that transition value changes on component |
 
 <br />
 
