--- a/packages/@lightningjs/ui-components-test-utils/src/docs/TestUtils/fastForward.stories.mdx
+++ b/packages/@lightningjs/ui-components-test-utils/src/docs/TestUtils/fastForward.stories.mdx
@@ -46,7 +46,7 @@ import {
   fastForward
 } from '@lightningjs/ui-components-test-utils';
 
-class Example extends Lightning.Component {
+class Example extends lng.Component {
   static _template() {
     const square = {
       rect: true,
