--- a/packages/@lightningjs/ui-components/src/components/FocusManager/FocusManager.mdx
+++ b/packages/@lightningjs/ui-components/src/components/FocusManager/FocusManager.mdx
@@ -54,7 +54,7 @@ class RowExample extends lng.Component {
 ```
 
 <Canvas>
-  <Story id="navigation-focusmanager--rows" />
+  <Story id="navigation-focusmanager--column-with-rows" />
 </Canvas>
 
 Set the `direction` property to `row` for left/right or `column` for up/down key handling.
@@ -67,10 +67,6 @@ Set the `direction` property to `row` for left/right or `column` for up/down key
 }
 ```
 
-<Canvas>
-  <Story id="navigation-focusmanager--columns" />
-</Canvas>
-
 To enable cycling focus between the first and last items, set the `wrapSelected` property to true.
 
 ```js
@@ -80,10 +76,6 @@ To enable cycling focus between the first and last items, set the `wrapSelected`
   children: [/* ... */]
 }
 ```
-
-<Canvas>
-  <Story id="navigation-focusmanager--wrap-selected" />
-</Canvas>
 
 ## Extending FocusManager
 
@@ -111,20 +103,16 @@ class FancyFocus extends FocusManager {
 }
 ```
 
-<Canvas>
-  <Story id="navigation-focusmanager--column-with-rows" />
-</Canvas>
-
 ## API
 
 ### Properties
 
-| name          | type                                                    | default   | description                                                    |
-| ------------- | ------------------------------------------------------- | --------- | -------------------------------------------------------------- |
-| direction     | 'column'\|'row'                                         | undefined | The navigation direction for focus ('left/right' or 'up/down') |
-| selectedIndex | number                                                  | undefined | The index of the currently selected item.                      |
-| items         | <DocsLink id="lng.Component">lng.Component[]</DocsLink> | undefined | Child element or elements of the FocusManager.                 |
-| wrapSelected  | boolean                                                 | false     | Enables wrapping behavior for focus navigation.                |
+| name          | type                                                    | default   | description                                                                                                                                                                                                                                                                                                                                            |
+| ------------- | ------------------------------------------------------- | --------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| direction     | 'column'\|'row'                                         | undefined | The navigation direction for focus ('left/right' or 'up/down')                                                                                                                                                                                                                                                                                         |
+| selectedIndex | number                                                  | undefined | The index of the currently selected item.                                                                                                                                                                                                                                                                                                              |
+| items         | <DocsLink id="lng.Component">lng.Component[]</DocsLink> | undefined | Child element or elements of the FocusManager.                                                                                                                                                                                                                                                                                                         |
+| wrapSelected  | boolean                                                 | false     | When wrapSelected is set to true, the focus will loop back to the beginning of the list after reaching the last item, and vice versa. This enables continuous navigation through the list without dead ends. If wrapSelected is set to false (the default value), the focus will stop at the first or last item, depending on the navigation direction |
 
 ### Methods
 
