docs(create): toJSON documentation

--- a/packages/@lightningjs/ui-components-test-utils/src/docs/TestRenderer/create.stories.mdx
+++ b/packages/@lightningjs/ui-components-test-utils/src/docs/TestRenderer/create.stories.mdx
@@ -103,3 +103,15 @@ beforeEach(() => {
   [testCompInstance, testRenderer] = createTestComp();
 });
 ```
+
+### toJSON
+
+`(children = 1) => toJSON(app.childList.first, { children })`
+Invokes the `toJSON` TestRenderer function, defaulting the number of levels deep into the component's to generate JSON for to 1. This is generally used for generating JSON for [snapshot testing with Jest](https://jestjs.io/docs/snapshot-testing).
+
+```js
+it('should match the snapshot for the component', () => {
+  const renderTree = testRenderer.toJSON();
+  expect(renderTree).toMatchSnapshot();
+});
+```
