docs(TestRenderer): add details to getContext

--- a/packages/@lightningjs/ui-components-test-utils/src/docs/TestRenderer/create.stories.mdx
+++ b/packages/@lightningjs/ui-components-test-utils/src/docs/TestRenderer/create.stories.mdx
@@ -217,8 +217,7 @@ it('should update the text when focused or unfocused', () => {
 
 ### getContext
 
-Returns the `context` class.
-TODO: need more details
+Returns the global `context` class.
 
 ```js
 // TODO: example
