docs(toJSON): remove placeholder text

--- a/packages/@lightningjs/ui-components-test-utils/src/docs/TestRenderer/toJSON.stories.mdx
+++ b/packages/@lightningjs/ui-components-test-utils/src/docs/TestRenderer/toJSON.stories.mdx
@@ -39,7 +39,7 @@ DESCRIPTION
 
 <br />
 
-##### Example: ADD EXAMPLE(S)
+##### Example: Snapshot testing using `TestRenderer.toJSON` and Jest's `toMatchSnapshot` matcher
 
 ```js
 import lng from '@lightningjs/core';
