docs(toJSON): add short description

--- a/packages/@lightningjs/ui-components-test-utils/src/docs/TestRenderer/toJSON.stories.mdx
+++ b/packages/@lightningjs/ui-components-test-utils/src/docs/TestRenderer/toJSON.stories.mdx
@@ -22,11 +22,7 @@ import { Meta } from '@storybook/addon-docs';
 
 # create
 
-DESCRIPTION
-
-- SHORT DESCRIPTION
-- LIST PROPERTIES THAT ARE STRINGIFIED
-- USE WITH JEST SNAPSHOTS
+Convert Lightning components to JSON to be used in [Jest Snapshot Tests](https://jestjs.io/docs/snapshot-testing).
 
 ## Arguments
 
