docs(completeAnimation): grammar check

--- a/packages/@lightningjs/ui-components-test-utils/src/docs/TestUtils/completeAnimation.stories.mdx
+++ b/packages/@lightningjs/ui-components-test-utils/src/docs/TestUtils/completeAnimation.stories.mdx
@@ -22,7 +22,7 @@ import { Meta } from '@storybook/addon-docs';
 
 # completeAnimation
 
-Returns a Promise that resolves once all animating properties have updated to their target value(s)
+Returns a Promise that resolves once all animating properties have updated to their target value(s).
 
 ## Arguments
 
