docs(toJSON): use correct title

--- a/packages/@lightningjs/ui-components-test-utils/src/docs/TestRenderer/toJSON.stories.mdx
+++ b/packages/@lightningjs/ui-components-test-utils/src/docs/TestRenderer/toJSON.stories.mdx
@@ -20,7 +20,7 @@ import { Meta } from '@storybook/addon-docs';
 
 <Meta title="Unit Testing / Test Renderer / toJSON" />
 
-# create
+# toJSON
 
 Convert Lightning components to JSON to be used in [Jest Snapshot Tests](https://jestjs.io/docs/snapshot-testing).
 
