docs(create): fix typo

--- a/packages/@lightningjs/ui-components-test-utils/src/docs/TestRenderer/create.stories.mdx
+++ b/packages/@lightningjs/ui-components-test-utils/src/docs/TestRenderer/create.stories.mdx
@@ -165,7 +165,7 @@ Invokes the `_focus` method on the component being tested. [See Lightning's docu
 
 ### unfocus
 
-Invokes the `_focus` method on the component being tested. [See Lightning's documentation for more details on the `_focus` and `_unfocus` methods](https://lightningjs.io/docs/#/lightning-core-reference/HandlingInput/RemoteControl/Focus?id=using-the-focus-and-unfocus-methods).
+Invokes the `_unfocus` method on the component being tested. [See Lightning's documentation for more details on the `_focus` and `_unfocus` methods](https://lightningjs.io/docs/#/lightning-core-reference/HandlingInput/RemoteControl/Focus?id=using-the-focus-and-unfocus-methods).
 
 ### getFocused
 
