--- a/packages/@lightningjs/ui-components-test-utils/src/docs/TestUtils/makeCreateComponent.stories.mdx
+++ b/packages/@lightningjs/ui-components-test-utils/src/docs/TestUtils/makeCreateComponent.stories.mdx
@@ -128,12 +128,12 @@ it('should allow focusing on the component', () => {
 });
 ```
 
-### withMethodSpies
+### spyOnMethods
 
 A utility which enables running component methods asynchronously.
 
-The `options` argument passed to the `createComponent` function accepts a field called `withMethodSpies`.
-The value for `withMethodSpies` can be an array of method names to generate promises from. When one of those methods is invoked in the component it's associated promise will resolve, then the actual method will be invoked. The promises generated from the passed in methods are given the name `_${methodName}SpyPromise`.
+The `options` argument passed to the `createComponent` function accepts a field called `spyOnMethods`.
+The value for `spyOnMethods` can be an array of method names to generate promises from. When one of those methods is invoked in the component it's associated promise will resolve, then the actual method will be invoked. The promises generated from the passed in methods are given the name `_${methodName}SpyPromise`.
 
 <br />
 
@@ -213,4 +213,4 @@ it('should update the title and subtitle', async () => {
 });
 ```
 
-**Note: `withMethodSpies` can only be set in in the `options` object of `createComponent`. It can not be assigned to the `defaultOptions` object in `makeCreateComponent`**
+**Note: `spyOnMethods` can only be set in in the `options` object of `createComponent`. It can not be assigned to the `defaultOptions` object in `makeCreateComponent`**
